@@ -35,7 +35,6 @@ bool CGUIWindowVideoActors::OnMessage(CGUIMessage& message)
   {
   case GUI_MSG_WINDOW_INIT:
     {
-      m_iShowMode = g_stSettings.m_iMyVideoActorShowMode;
     }
     break;
 
@@ -44,9 +43,9 @@ bool CGUIWindowVideoActors::OnMessage(CGUIMessage& message)
       int iControl = message.GetSenderId();
       if (iControl == CONTROL_BTNSHOWMODE)
 	    {
-        m_iShowMode++;
-		    if (m_iShowMode > VIDEO_SHOW_WATCHED) m_iShowMode = VIDEO_SHOW_ALL;
-		    g_stSettings.m_iMyVideoActorShowMode = m_iShowMode;
+        g_stSettings.m_iMyVideoWatchMode++;
+		    if (g_stSettings.m_iMyVideoWatchMode > VIDEO_SHOW_WATCHED)
+          g_stSettings.m_iMyVideoWatchMode = VIDEO_SHOW_ALL;
         g_settings.Save();
 		    Update(m_vecItems.m_strPath);
         return true;
